Bug 708155 - Fix dynamic modifications to styles on foreignObject. r=dholbert