layout/svg/base/src/nsSVGForeignObjectFrame.h
@@ -45,6 +45,7 @@
 #include "nsIPresShell.h"
 #include "gfxRect.h"
 #include "gfxMatrix.h"
+#include "mozilla/Attributes.h"
 
 class nsSVGOuterSVGFrame;
 
@@ -70,6 +71,8 @@ public:
   NS_IMETHOD  AttributeChanged(PRInt32         aNameSpaceID,
                                nsIAtom*        aAttribute,
                                PRInt32         aModType);
+
+  virtual void DidSetStyleContext(nsStyleContext* aOldStyleContext) MOZ_OVERRIDE;
 
   virtual nsIFrame* GetContentInsertionFrame() {
     return GetFirstPrincipalChild()->GetContentInsertionFrame();
